--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,54 +42,54 @@ build_gcc_noros_nohrpsys:
   tags:
     - GCC
 
-#build_gcc_noros_hrpsys:
-#  stage: build
-#  script:
-#    - echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list
-#    - apt-key adv --keyserver hkp://pool.sks-keyservers.net --recv-key 0xB01FA116
-#    - ./.jrl-ci/run before_install
-#    - export MASTER_PPA=""
-#    - export APT_DEPENDENCIES="hrpsys-base liblapack-dev libblas-dev libjpeg-dev libpng12-dev"
-#    - export GIT_DEPENDENCIES=""
-#    - ./.jrl-ci/run before_install
-#    - ./.jrl-ci/run build
-#    - ./.jrl-ci/run after_success
-#  tags:
-#    - GCC
-#
-#build_gcc_ros_nohrpsys:
-#  stage: build
-#  script:
-#    - echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list
-#    - apt-key adv --keyserver hkp://pool.sks-keyservers.net --recv-key 0xB01FA116
-#    - ./.jrl-ci/run before_install
-#    - ./.jrl-ci/dependencies/catkin
-#    - export MASTER_PPA=""
-#    - export APT_DEPENDENCIES="ros-indigo-common-msgs ros-indigo-tf2-ros ros-indigo-xacro ros-indigo-rviz-animated-view-controller"
-#    - export GIT_DEPENDENCIES=""
-#    - export ROS_GIT_DEPENDENCIES="git@gite.lirmm.fr:multi-contact/mc_ros#master git@gite.lirmm.fr:mc-hrp2/hrp2_drc#master git@gite.lirmm.fr:mc-hrp4/hrp4#master"
-#    - ./.jrl-ci/run before_install
-#    - ./.jrl-ci/run build
-#    - ./.jrl-ci/run after_success
-#  tags:
-#    - GCC
-#
-#build_gcc_ros_hrpsys:
-#  stage: build
-#  script:
-#    - echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list
-#    - apt-key adv --keyserver hkp://pool.sks-keyservers.net --recv-key 0xB01FA116
-#    - ./.jrl-ci/run before_install
-#    - ./.jrl-ci/dependencies/catkin
-#    - export MASTER_PPA=""
-#    - export APT_DEPENDENCIES="ros-indigo-common-msgs ros-indigo-tf2-ros ros-indigo-xacro ros-indigo-rviz-animated-view-controller hrpsys-base liblapack-dev libblas-dev"
-#    - export GIT_DEPENDENCIES=""
-#    - export ROS_GIT_DEPENDENCIES="git@gite.lirmm.fr:multi-contact/mc_ros#master git@gite.lirmm.fr:mc-hrp2/hrp2_drc#master git@gite.lirmm.fr:mc-hrp4/hrp4#master"
-#    - ./.jrl-ci/run before_install
-#    - ./.jrl-ci/run build
-#    - ./.jrl-ci/run after_success
-#  tags:
-#    - GCC
+build_gcc_noros_hrpsys:
+  stage: build
+  script:
+    - echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list
+    - apt-key adv --keyserver hkp://pool.sks-keyservers.net --recv-key 0xB01FA116
+    - ./.jrl-ci/run before_install
+    - export MASTER_PPA=""
+    - export APT_DEPENDENCIES="hrpsys-base liblapack-dev libblas-dev libjpeg-dev libpng12-dev"
+    - export GIT_DEPENDENCIES=""
+    - ./.jrl-ci/run before_install
+    - ./.jrl-ci/run build
+    - ./.jrl-ci/run after_success
+  tags:
+    - GCC
+
+build_gcc_ros_nohrpsys:
+  stage: build
+  script:
+    - echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list
+    - apt-key adv --keyserver hkp://pool.sks-keyservers.net --recv-key 0xB01FA116
+    - ./.jrl-ci/run before_install
+    - ./.jrl-ci/dependencies/catkin
+    - export MASTER_PPA=""
+    - export APT_DEPENDENCIES="ros-indigo-common-msgs ros-indigo-tf2-ros ros-indigo-xacro ros-indigo-rviz-animated-view-controller"
+    - export GIT_DEPENDENCIES=""
+    - export ROS_GIT_DEPENDENCIES="git@gite.lirmm.fr:multi-contact/mc_ros#master git@gite.lirmm.fr:mc-hrp2/hrp2_drc#master git@gite.lirmm.fr:mc-hrp4/hrp4#master"
+    - ./.jrl-ci/run before_install
+    - ./.jrl-ci/run build
+    - ./.jrl-ci/run after_success
+  tags:
+    - GCC
+
+build_gcc_ros_hrpsys:
+  stage: build
+  script:
+    - echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list
+    - apt-key adv --keyserver hkp://pool.sks-keyservers.net --recv-key 0xB01FA116
+    - ./.jrl-ci/run before_install
+    - ./.jrl-ci/dependencies/catkin
+    - export MASTER_PPA=""
+    - export APT_DEPENDENCIES="ros-indigo-common-msgs ros-indigo-tf2-ros ros-indigo-xacro ros-indigo-rviz-animated-view-controller hrpsys-base liblapack-dev libblas-dev"
+    - export GIT_DEPENDENCIES=""
+    - export ROS_GIT_DEPENDENCIES="git@gite.lirmm.fr:multi-contact/mc_ros#master git@gite.lirmm.fr:mc-hrp2/hrp2_drc#master git@gite.lirmm.fr:mc-hrp4/hrp4#master"
+    - ./.jrl-ci/run before_install
+    - ./.jrl-ci/run build
+    - ./.jrl-ci/run after_success
+  tags:
+    - GCC
 
 package_trusty_amd64:
   stage: package
@@ -114,6 +114,90 @@ package_trusty_amd64_ros:
     - ./.packaging/build_recipe.sh .mc-rtc-ros.recipe trusty amd64
   artifacts:
     name: "tasks_trusty_amd64"
+    paths:
+      - "*.deb"
+  tags:
+    - GCC
+
+package_trusty_i386:
+  stage: package
+  before_script:
+    - git submodule update --quiet --init --recursive
+    - ./.packaging/setup_pbuilder.sh trusty i386
+  script:
+    - ./.packaging/build_recipe.sh .mc-rtc.recipe trusty i386
+  artifacts:
+    name: "tasks_trusty_i386"
+    paths:
+      - "*.deb"
+  tags:
+    - GCC
+
+package_trusty_i386_ros:
+  stage: package
+  before_script:
+    - git submodule update --quiet --init --recursive
+    - ./.packaging/setup_pbuilder.sh trusty i386
+  script:
+    - ./.packaging/build_recipe.sh .mc-rtc-ros.recipe trusty i386
+  artifacts:
+    name: "tasks_trusty_i386"
+    paths:
+      - "*.deb"
+  tags:
+    - GCC
+
+package_xenial_amd64:
+  stage: package
+  before_script:
+    - git submodule update --quiet --init --recursive
+    - ./.packaging/setup_pbuilder.sh xenial amd64
+  script:
+    - ./.packaging/build_recipe.sh .mc-rtc.recipe xenial amd64
+  artifacts:
+    name: "tasks_xenial_amd64"
+    paths:
+      - "*.deb"
+  tags:
+    - GCC
+
+package_xenial_amd64_ros:
+  stage: package
+  before_script:
+    - git submodule update --quiet --init --recursive
+    - ./.packaging/setup_pbuilder.sh xenial amd64
+  script:
+    - ./.packaging/build_recipe.sh .mc-rtc-ros.recipe xenial amd64
+  artifacts:
+    name: "tasks_xenial_amd64"
+    paths:
+      - "*.deb"
+  tags:
+    - GCC
+
+package_xenial_i386:
+  stage: package
+  before_script:
+    - git submodule update --quiet --init --recursive
+    - ./.packaging/setup_pbuilder.sh xenial i386
+  script:
+    - ./.packaging/build_recipe.sh .mc-rtc.recipe xenial i386
+  artifacts:
+    name: "tasks_xenial_i386"
+    paths:
+      - "*.deb"
+  tags:
+    - GCC
+
+package_xenial_i386_ros:
+  stage: package
+  before_script:
+    - git submodule update --quiet --init --recursive
+    - ./.packaging/setup_pbuilder.sh xenial i386
+  script:
+    - ./.packaging/build_recipe.sh .mc-rtc-ros.recipe xenial i386
+  artifacts:
+    name: "tasks_xenial_i386"
     paths:
       - "*.deb"
   tags:
