Add a noros identifier to non-ROS builds

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,19 +17,19 @@ before_script:
   - git submodule update --quiet --init --recursive
   - ./.jrl-ci/dependencies/eigen-3.2
 
-#build_debian:
-#  stage: build
-#  script:
-#    - export APT_DEPENDENCIES="libtinyxml2-dev libboost-all-dev libjsoncpp-dev libgeos++-dev libgeos-dev qhull-bin libqhull-dev libltdl-dev"
-#    - export GIT_DEPENDENCIES="jrl-umi3218/SpaceVecAlg jrl-umi3218/eigen-qld git@gite.lirmm.fr:multi-contact/eigen-lssol.git jrl-umi3218/sch-core jrl-umi3218/RBDyn jrl-umi3218/Tasks git@gite.lirmm.fr:multi-contact/mc_rbdyn_urdf_cpp.git"
-#    - export MASTER_PPA=""
-#    - export ROS_GIT_DEPENDENCIES="git@gite.lirmm.fr:multi-contact/mc_ros#master git@gite.lirmm.fr:mc-hrp2/hrp2_drc#master git@gite.lirmm.fr:mc-hrp4/hrp4#master"
-#    - mkdir -p /tmp/_ci/catkin_dep_ws/src
-#    - ./.jrl-ci/run before_install
-#    - ./.jrl-ci/run build
-#    - ./.jrl-ci/run after_success
-#  tags:
-#    - debian
+build_debian:
+  stage: build
+  script:
+    - export APT_DEPENDENCIES="libtinyxml2-dev libboost-all-dev libjsoncpp-dev libgeos++-dev libgeos-dev qhull-bin libqhull-dev libltdl-dev"
+    - export GIT_DEPENDENCIES="jrl-umi3218/SpaceVecAlg jrl-umi3218/eigen-qld git@gite.lirmm.fr:multi-contact/eigen-lssol.git jrl-umi3218/sch-core jrl-umi3218/RBDyn jrl-umi3218/Tasks git@gite.lirmm.fr:multi-contact/mc_rbdyn_urdf_cpp.git"
+    - export MASTER_PPA=""
+    - export ROS_GIT_DEPENDENCIES="git@gite.lirmm.fr:multi-contact/mc_ros#master git@gite.lirmm.fr:mc-hrp2/hrp2_drc#master git@gite.lirmm.fr:mc-hrp4/hrp4#master"
+    - mkdir -p /tmp/_ci/catkin_dep_ws/src
+    - ./.jrl-ci/run before_install
+    - ./.jrl-ci/run build
+    - ./.jrl-ci/run after_success
+  tags:
+    - debian
 
 build_gcc_noros_nohrpsys:
   stage: build
@@ -91,7 +91,7 @@ build_gcc_ros_hrpsys:
   tags:
     - GCC
 
-package_trusty_amd64:
+package_trusty_amd64_noros:
   stage: package
   before_script:
     - git submodule update --quiet --init --recursive
@@ -119,7 +119,7 @@ package_trusty_amd64_ros:
   tags:
     - GCC
 
-package_trusty_i386:
+package_trusty_i386_noros:
   stage: package
   before_script:
     - git submodule update --quiet --init --recursive
@@ -147,7 +147,7 @@ package_trusty_i386_ros:
   tags:
     - GCC
 
-package_xenial_amd64:
+package_xenial_amd64_noros:
   stage: package
   before_script:
     - git submodule update --quiet --init --recursive
@@ -175,7 +175,7 @@ package_xenial_amd64_ros:
   tags:
     - GCC
 
-package_xenial_i386:
+package_xenial_i386_noros:
   stage: package
   before_script:
     - git submodule update --quiet --init --recursive
