Move MCControl and MCControlComp to mc_openrtm
hrpsys-base remains an optional dependency to gain access to PD gains
tuning on HRP robots. This is only useful on the real robot though.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,14 +45,10 @@ add_required_dependency("Tasks" "Tasks_d")
 add_required_dependency("mc_rbdyn_urdf_cpp" "mc_rbdyn_urdf_cpp_d")
 pkg_config_append_cflags("-I${Eigen_INCLUDE_DIR}")
 
+# At this point, this dependency is used to get access to PD gains setting on HRP robots
 add_optional_dependency(hrpsys-base)
 if(${HRPSYS_BASE_FOUND})
   set(DEFINE_HAS_HRPSYS_BASE_MACRO "#define MC_RTC_HAS_HRPSYS_BASE 1")
-  include(cmake/idl.cmake)
-  omniidl_include_directories("idl")
-  add_subdirectory(idl)
-  set_source_files_properties(${CMAKE_BINARY_DIR}/idl/MCControlService_idl.py PROPERTIES GENERATED 1)
-  install(FILES ${CMAKE_BINARY_DIR}/idl/MCControlService_idl.py DESTINATION lib/python2.7/dist-packages/hrpsys)
 else()
   set(DEFINE_HAS_HRPSYS_BASE_MACRO "")
 endif()
