--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -28,29 +28,5 @@
   // "LogDirectory" : "/tmp",
 
   // The log file will have the name [LogTemplate]-[ControllerName]-[date].log
-  "LogTemplate" : "mc-control",
-
-  // The data belows regards the configuration of the Seq controller
-  "Seq" : {
-    "Env" : {
-      "Path" : "/home/gergondet/devel-src/catkin_ws/mc_ws/src/hrp2_drc/hrp2_drc_description",
-      "Name" : "drc_stairs2"
-    },
-    "Plan" : "drc_stairs_climbing.json",
-    //"Env" : {
-    //  "Name" : "jvrc_ladder"
-    //},
-    //"Plan" : "jvrc_ladder_climbing.json",
-    //"Env" : {
-    //  "Name" : "irex_ladder"
-    //},
-    //"Plan" : "irex_ladder_climbing.json",
-    //"Env" : {
-    //  "Module" : "Polaris"
-    //},
-    //"Plan" : "drc_car_egress.json",
-    "UseRealSensors" : 1,
-    "StartStance" : 0,
-    "StepByStep"  : 0
-  }
+  "LogTemplate" : "mc-control"
 }
