--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -29,4 +29,11 @@
 
   // The log file will have the name [LogTemplate]-[ControllerName]-[date].log
   "LogTemplate" : "mc-control"
+
+  // The following options are used to control the location of the controllers' and robots' modules (libraries)
+  // The paths added by this option are added to the default path
+  //"ControllerModulePath" : "/a/single/path/to/controller/directory/"
+  //"ControllerModulePath" : ["/one/path/to/controller/", "/another/path/"]
+  //"RobotModulePath" : "/a/single/path/to/robot/directory/"
+  //"RobotModulePath" : ["/one/path/to/robot/", "/another/path/"]
 }
