Setup controllers' testing
The current ticker implementation only loads the configuration. The
implementation should be refined to:
1. Define some expected outcome of the test (e.g. instantation will
throw)
2. Actually run a controller (and let this controller handle the
internal testing)

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -17,3 +17,8 @@ MACRO(MC_RTC_TEST NAME)
 ENDMACRO()
 
 MC_RTC_TEST(testConfiguration mc_control)
+
+add_executable(test_controller_ticker test_controller_ticker.cpp)
+target_link_libraries(test_controller_ticker ${Boost_LIBRARIES} mc_control)
+
+add_subdirectory(controllers)
