Add an option to remove the default Controller/Robot module path
This is mostly aimed at cleaning the test environment

--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -30,10 +30,18 @@
   // The log file will have the name [LogTemplate]-[ControllerName]-[date].log
   "LogTemplate" : "mc-control"
 
-  // The following options are used to control the location of the controllers' and robots' modules (libraries)
+  // The following options are used to control the location of the
+  // controllers' and robots' modules (libraries)
   // The paths added by this option are added to the default path
   //"ControllerModulePath" : "/a/single/path/to/controller/directory/"
   //"ControllerModulePath" : ["/one/path/to/controller/", "/another/path/"]
   //"RobotModulePath" : "/a/single/path/to/robot/directory/"
   //"RobotModulePath" : ["/one/path/to/robot/", "/another/path/"]
+
+  // The following options are used to clear the default loading path
+  // for controllers and robots respectively
+  // This is only useful to run test on a machine where mc_rtc has
+  // already been installed
+  //"ClearControllerModulePath" : false
+  //"ClearRobotModulePath" : false
 }
