Create a separate directory for each controller test

--- a/tests/controllers/CMakeLists.txt
+++ b/tests/controllers/CMakeLists.txt
@@ -1,15 +1,18 @@
 macro(CONTROLLER_TEST_COMMON NAME)
   add_library(${NAME} SHARED ${NAME}.cpp)
   target_link_libraries(${NAME} ${Boost_LIBRARIES} mc_control)
-  set_target_properties(${NAME} PROPERTIES COMPILE_FLAGS
-    "-DMC_CONTROL_EXPORTS" PREFIX "")
+  set_target_properties(${NAME} PROPERTIES
+    COMPILE_FLAGS "-DMC_CONTROL_EXPORTS"
+    PREFIX ""
+    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${NAME}
+    )
   set(TEST_CONTROLLER_NAME ${NAME})
-  configure_file(${CMAKE_CURRENT_SOURCE_DIR}/mc_rtc.conf.in ${CMAKE_CURRENT_BINARY_DIR}/mc_rtc-${NAME}.conf)
+  configure_file(${CMAKE_CURRENT_SOURCE_DIR}/mc_rtc.conf.in ${CMAKE_CURRENT_BINARY_DIR}/${NAME}/mc_rtc-${NAME}.conf)
 endmacro()
 
 macro(CONTROLLER_TEST_CONSTRUCTION_FAILURE NAME)
   CONTROLLER_TEST_COMMON(${NAME})
-  add_test(NAME ${NAME} COMMAND test_controller_ticker --run_test=CONSTRUCTION_FAILURE mc_rtc-${NAME}.conf)
+  add_test(NAME ${NAME} COMMAND test_controller_ticker --run_test=CONSTRUCTION_FAILURE ${NAME}/mc_rtc-${NAME}.conf)
 endmacro()
 
 macro(CONTROLLER_TEST_RUN NAME NRITER)
