Add test for missing destroy/create symbols

--- a/tests/controllers/CMakeLists.txt
+++ b/tests/controllers/CMakeLists.txt
@@ -21,10 +21,11 @@ macro(CONTROLLER_TEST_RUN NAME NRITER)
 endmacro()
 
 CONTROLLER_TEST_CONSTRUCTION_FAILURE(NotAController)
-
-# To run properly these tests require controller creation sandboxing
+CONTROLLER_TEST_CONSTRUCTION_FAILURE(NoDestroyController)
+CONTROLLER_TEST_CONSTRUCTION_FAILURE(NoCreateController)
+# To run properly this test requires controller creation sandboxing
 # which is only enabled on Linux
 if(UNIX AND NOT APPLE)
   CONTROLLER_TEST_CONSTRUCTION_FAILURE(UnresolvedSymbolController)
-  CONTROLLER_TEST_CONSTRUCTION_FAILURE(ThrowingController)
 endif()
+CONTROLLER_TEST_CONSTRUCTION_FAILURE(ThrowingController)
