Make controller/robot creation sandboxing optional

--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -30,6 +30,10 @@
   // The log file will have the name [LogTemplate]-[ControllerName]-[date].log
   "LogTemplate" : "mc-control"
 
+  // The following option is used to disable controller/robot creation sandboxing
+  // This option only affects Linux
+  // "UseSandbox": true
+
   // The following options are used to control the location of the
   // controllers' and robots' modules (libraries)
   // The paths added by this option are added to the default path
