"Catch" SIGSEGV and SIGFPE in sandbox
Also add related tests for Robot/Controller creation

--- a/tests/robots/CMakeLists.txt
+++ b/tests/robots/CMakeLists.txt
@@ -22,5 +22,7 @@ ROBOT_TEST_CONSTRUCTION_FAILURE(NoCreateRobot)
 # which is only enabled on Linux
 if(UNIX AND NOT APPLE)
   ROBOT_TEST_CONSTRUCTION_FAILURE(UnresolvedSymbolRobot)
+  ROBOT_TEST_CONSTRUCTION_FAILURE(SegfaultRobot)
+  ROBOT_TEST_CONSTRUCTION_FAILURE(FPERobot)
 endif()
 ROBOT_TEST_CONSTRUCTION_FAILURE(ThrowingRobot)
