[CI] Packaging fixes
- Use latest packaging submodule to correctly detect ROS
- Build the current branch

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,6 +34,7 @@ build_debian:
 build_gcc_noros:
   stage: build
   script:
+    - export ROS_DISTRO=""
     - ./.jrl-ci/run before_install
     - pushd .
     - cd /tmp && git clone -b karim_drc --recursive git@gite.lirmm.fr:multi-contact/mc_ros
@@ -72,8 +73,10 @@ build_with_script:
 package_trusty_amd64_noros:
   stage: package
   before_script:
+    - export ROS_DISTRO=""
     - git submodule update --quiet --init --recursive
     - ./.packaging/setup_pbuilder.sh trusty amd64
+    - sed -i -e"s@mc_rtc master@mc_rtc ${CI_BUILD_REF_NAME}@" .mc-rtc.recipe
   script:
     - ./.packaging/build_recipe.sh .mc-rtc.recipe trusty amd64
   artifacts:
@@ -88,6 +91,7 @@ package_trusty_amd64_ros:
   before_script:
     - git submodule update --quiet --init --recursive
     - ./.packaging/setup_pbuilder.sh trusty amd64
+    - sed -i -e"s@mc_rtc master@mc_rtc ${CI_BUILD_REF_NAME}@" .mc-rtc-ros.recipe
   script:
     - ./.packaging/build_recipe.sh .mc-rtc-ros.recipe trusty amd64
   artifacts:
@@ -100,8 +104,10 @@ package_trusty_amd64_ros:
 package_trusty_i386_noros:
   stage: package
   before_script:
+    - export ROS_DISTRO=""
     - git submodule update --quiet --init --recursive
     - ./.packaging/setup_pbuilder.sh trusty i386
+    - sed -i -e"s@mc_rtc master@mc_rtc ${CI_BUILD_REF_NAME}@" .mc-rtc.recipe
   script:
     - ./.packaging/build_recipe.sh .mc-rtc.recipe trusty i386
   artifacts:
@@ -116,6 +122,7 @@ package_trusty_i386_ros:
   before_script:
     - git submodule update --quiet --init --recursive
     - ./.packaging/setup_pbuilder.sh trusty i386
+    - sed -i -e"s@mc_rtc master@mc_rtc ${CI_BUILD_REF_NAME}@" .mc-rtc-ros.recipe
   script:
     - ./.packaging/build_recipe.sh .mc-rtc-ros.recipe trusty i386
   artifacts:
@@ -128,9 +135,10 @@ package_trusty_i386_ros:
 package_xenial_amd64_noros:
   stage: package
   before_script:
-    - export ROS_DISTRO="kinetic"
+    - export ROS_DISTRO=""
     - git submodule update --quiet --init --recursive
     - ./.packaging/setup_pbuilder.sh xenial amd64
+    - sed -i -e"s@mc_rtc master@mc_rtc ${CI_BUILD_REF_NAME}@" .mc-rtc.recipe
   script:
     - ./.packaging/build_recipe.sh .mc-rtc.recipe xenial amd64
   artifacts:
@@ -146,6 +154,7 @@ package_xenial_amd64_ros:
     - export ROS_DISTRO="kinetic"
     - git submodule update --quiet --init --recursive
     - ./.packaging/setup_pbuilder.sh xenial amd64
+    - sed -i -e"s@mc_rtc master@mc_rtc ${CI_BUILD_REF_NAME}@" .mc-rtc-ros.recipe
   script:
     - ./.packaging/build_recipe.sh .mc-rtc-ros.recipe xenial amd64
   artifacts:
@@ -158,9 +167,10 @@ package_xenial_amd64_ros:
 package_xenial_i386_noros:
   stage: package
   before_script:
-    - export ROS_DISTRO="kinetic"
+    - export ROS_DISTRO=""
     - git submodule update --quiet --init --recursive
     - ./.packaging/setup_pbuilder.sh xenial i386
+    - sed -i -e"s@mc_rtc master@mc_rtc ${CI_BUILD_REF_NAME}@" .mc-rtc.recipe
   script:
     - ./.packaging/build_recipe.sh .mc-rtc.recipe xenial i386
   artifacts:
@@ -176,6 +186,7 @@ package_xenial_i386_ros:
     - export ROS_DISTRO="kinetic"
     - git submodule update --quiet --init --recursive
     - ./.packaging/setup_pbuilder.sh xenial i386
+    - sed -i -e"s@mc_rtc master@mc_rtc ${CI_BUILD_REF_NAME}@" .mc-rtc-ros.recipe
   script:
     - ./.packaging/build_recipe.sh .mc-rtc-ros.recipe xenial i386
   artifacts:
