Make log policy configurable

--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -24,8 +24,14 @@
   // Set to true or false to enable/disable respectively
   "Log" : true,
 
-  // LogDirectory dictates where the log files will be stored, defaults to system temp directory
-  // "LogDirectory" : "/tmp",
+  // LogPolicy dictates whether logging-related disk operations happen in a
+  // separate thread ("threaded") or in the same thread as the run() loop
+  // ("non-threaded"). This defaults to the non-threaded policy. On real-time
+  // systems, the threaded policy is advised
+  // "LogPolicy" : "threaded",
+
+  // LogDirectory dictates where the log files will be stored, defaults to
+  // system temp directory "LogDirectory" : "/tmp",
 
   // The log file will have the name [LogTemplate]-[ControllerName]-[date].log
   "LogTemplate" : "mc-control"
