--- a/tests/controllers/mc_rtc.conf.in
+++ b/tests/controllers/mc_rtc.conf.in
@@ -10,6 +10,7 @@
   "Timestep" : 0.005,
 
   "Log" : @LOG_ENABLED@,
+  "LogPolicy" : "@LOG_POLICY@",
   "LogDirectory" : "/tmp",
   "LogTemplate" : "mc-rtc-test",
 
