--- a/tests/controllers/CMakeLists.txt
+++ b/tests/controllers/CMakeLists.txt
@@ -41,8 +41,24 @@ CONTROLLER_TEST_RUN(TestPostureController 400)
 # *-latest.log symlink created by mc_rtc
 if(UNIX)
   add_test(TestPostureControllerLog ${CMAKE_CURRENT_SOURCE_DIR}/check_log.py "TestPostureController" 400)
+
+  # Test threaded log policy
   set(LOG_POLICY "threaded")
   configure_file(${CMAKE_CURRENT_SOURCE_DIR}/mc_rtc.conf.in ${CMAKE_CURRENT_BINARY_DIR}/TestPostureController/mc_rtc-TestPostureController-threaded-log.conf)
   add_test(NAME TestPostureControllerThreadedLogging COMMAND test_controller_ticker --run_test=RUN TestPostureController/mc_rtc-TestPostureController-threaded-log.conf 1200)
   add_test(TestPostureControllerThreadedLog ${CMAKE_CURRENT_SOURCE_DIR}/check_log.py "TestPostureController" 1200)
+
+  # Test controller switch and threaded log policy
+  add_library(TestPostureController2 SHARED TestPostureController2.cpp)
+  target_link_libraries(TestPostureController2 ${Boost_LIBRARIES} mc_control)
+  set_target_properties(TestPostureController2 PROPERTIES
+    COMPILE_FLAGS "-DMC_CONTROL_EXPORTS"
+    PREFIX ""
+    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/TestPostureController
+    )
+  set(TEST_CONTROLLER_NAME "TestPostureController\", \"TestPostureController2")
+  configure_file(${CMAKE_CURRENT_SOURCE_DIR}/mc_rtc.conf.in ${CMAKE_CURRENT_BINARY_DIR}/TestPostureController/mc_rtc-TestPostureController2.conf)
+  add_test(NAME TestPostureController2 COMMAND test_controller_ticker --run_test=RUN TestPostureController/mc_rtc-TestPostureController2.conf 1200 TestPostureController2)
+  add_test(TestPostureControllerControllerSwitchThreadedLog ${CMAKE_CURRENT_SOURCE_DIR}/check_log.py "TestPostureController" 1200)
+  add_test(TestPostureController2ControllerSwitchThreadedLog ${CMAKE_CURRENT_SOURCE_DIR}/check_log.py "TestPostureController2" 1200)
 endif()
