Introduce mc_tasks::TrajectoryTaskGeneric<T> and use it
This class is meant to be used to wrap any task error function from
Task used inside a TrajectoryTask

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -136,6 +136,8 @@ set(mc_tasks_HDR
 ../include/mc_tasks/SmoothTask.h
 ../include/mc_tasks/StabilityTask.h
 ../include/mc_tasks/TrajectoryTask.h
+../include/mc_tasks/TrajectoryTaskGeneric.h
+../include/mc_tasks/TrajectoryTaskGeneric.hpp
 ../include/mc_tasks/ComplianceTask.h
 )
 
