--- a/tests/controllers/CMakeLists.txt
+++ b/tests/controllers/CMakeLists.txt
@@ -66,3 +66,4 @@ endif()
 set(LOG_POLICY "non-threaded")
 # mc_task test controllers
 CONTROLLER_TEST_RUN(TestPositionTaskController 5000)
+CONTROLLER_TEST_RUN(TestOrientationTaskController 6001)
