Add a test for mc_tasks::EndEffectorTask

--- a/tests/controllers/CMakeLists.txt
+++ b/tests/controllers/CMakeLists.txt
@@ -68,3 +68,4 @@ set(LOG_POLICY "non-threaded")
 CONTROLLER_TEST_RUN(TestCoMTaskController 4001)
 CONTROLLER_TEST_RUN(TestPositionTaskController 5000)
 CONTROLLER_TEST_RUN(TestOrientationTaskController 6001)
+CONTROLLER_TEST_RUN(TestEndEffectorTaskController 4001)
