--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -12,6 +12,9 @@
   // Publish the state of the controlled robot (ROS)
   "PublishControlState" : true,
 
+  // Publish the state of the other robots (ROS)
+  "PublishEnvState" : true,
+
   // Publish the state of the real robot (ROS)
   "PublishRealState" : true,
 
