--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -9,6 +9,11 @@
   // will be enabled first, this defaults to the first controller enabled
   //"Default"   : "Body6d",
 
+  // If this option is set to true, the sensor input for position and
+  // orientation will be used to update the real robot's free flyer,
+  // otherwise, the controller state is used
+  // "UpdateRealFromSensors" : false,
+
   // Publish the state of the controlled robot (ROS)
   "PublishControlState" : true,
 
