Allows to set the loader's verbosity

--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -44,6 +44,10 @@
   // The log file will have the name [LogTemplate]-[ControllerName]-[date].log
   "LogTemplate" : "mc-control"
 
+  // The following option change the verbosity of the controller and robot
+  // loader
+  "VerboseLoader" : true,
+
   // The following option is used to disable controller/robot creation sandboxing
   // This option only affects Linux
   // "UseSandbox": true
