--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -42,11 +42,11 @@
   // system temp directory "LogDirectory" : "/tmp",
 
   // The log file will have the name [LogTemplate]-[ControllerName]-[date].log
-  "LogTemplate" : "mc-control"
+  "LogTemplate" : "mc-control",
 
   // The following option change the verbosity of the controller and robot
   // loader
-  "VerboseLoader" : true,
+  "VerboseLoader" : true
 
   // The following option is used to disable controller/robot creation sandboxing
   // This option only affects Linux
