--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -17,6 +17,8 @@ MACRO(MC_RTC_TEST NAME)
   target_link_libraries(${NAME} ${Boost_LIBRARIES} ${ARGN})
   pkg_config_use_dependency(${NAME} jsoncpp)
   add_test(${NAME} ${NAME})
+	# Adding a project configuration file (for MSVC only)
+    GENERATE_MSVC_DOT_USER_FILE(${NAME})
 ENDMACRO()
 
 MC_RTC_TEST(testConfiguration mc_control)
@@ -25,6 +27,8 @@ add_executable(test_controller_ticker test_controller_ticker.cpp)
 pkg_config_use_dependency(test_controller_ticker mc_rbdyn_urdf_cpp)
 target_link_libraries(test_controller_ticker ${Boost_LIBRARIES} mc_control)
 pkg_config_use_dependency(test_controller_ticker Tasks)
+# Adding a project configuration file (for MSVC only)
+GENERATE_MSVC_DOT_USER_FILE(test_controller_ticker)
 
 add_subdirectory(controllers)
 add_subdirectory(robots)
