--- a/tests/controllers/CMakeLists.txt
+++ b/tests/controllers/CMakeLists.txt
@@ -13,6 +13,8 @@ macro(CONTROLLER_TEST_COMMON NAME)
     )
   set(TEST_CONTROLLER_NAME ${NAME})
   configure_file(${CMAKE_CURRENT_SOURCE_DIR}/mc_rtc.conf.in ${CMAKE_CURRENT_BINARY_DIR}/${NAME}/mc_rtc-${NAME}.conf)
+  # Adding a project configuration file (for MSVC only)
+  GENERATE_MSVC_DOT_USER_FILE(${NAME})
 endmacro()
 
 macro(CONTROLLER_TEST_CONSTRUCTION_FAILURE NAME)
